# SQL_pqxx

./: CMakeLists.txt  main.cpp
